chore: create DebugApi event for V4 Proxy